--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
     <div class="container">
-        <h2 class="logo">NETFLIX</h2>
+        <h2 class="logo">MeuFLIX</h2>
         <nav>
             <a href="">Inicío</a>
             <a href="">Séries</a>
@@ -30,18 +30,18 @@
     </div>
     </header>
     <main>
-        <div class="filme-principal">
+        <div class="filme-principal" id="cardprincipal">
             <div class="container">
-                <h3 class="titulo">CHAMADA DE EMERGÊNCIA</h3>
-                <p class="descricao">Jordan (Halle Berry) é atendente do sistema de emergência da polícia. Um dia, atende uma ligação de uma jovem assustada com o fato de que existe um homem tentando invadir sua casa. O caso acaba com o pior final possível. Anos mais tarde, ela se vê diante do mesmo criminoso, que agora ameaça outra garota.</p>
+                <h3 class="titulo" id="tituloDaPagina">Bem vindo ao MeuFlix</h3>
+                <p class="descricao" id="descricao">Aqui você vai encontrar filmes e series que estão disponiveis gratuitamente no youtube. Divirta-se</p>
                 <div class="botoes">
-                    <a href="https://www.youtube.com/embed/bXptWmQGfd0">
+                    <a href="#" id="play">
                         <button role="button" class="botao">
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                         </button>
                     </a>
-                    <button role="button" class="botao">
+                    <button id="yes" role="button" class="botao">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
@@ -49,49 +49,51 @@
             </div>
         </div>
     </main>
-
     <div class="carrosel-filmes">
         <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img class="box-filme" src="img/mini1.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="a" class="box-filme" src="img/mini1.jpg" alt="" srcset="">    
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini2.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="b" class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+                </div>
+                <div class="item">                   
+                    <img onclick="myFunction(this.id)" id="c" class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+                
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini3.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="d" class="box-filme" src="img/mini7.jpg" alt="" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini4.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="e" class="box-filme" src="img/mini5.jpg" alt="" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini5.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="f" class="box-filme" src="img/mini6.jpg" alt="" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini6.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="g" class="box-filme" src="img/mini8.jpg" alt="" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini7.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="h" class="box-filme" src="img/mini2.jpg" alt="" srcset="">
                 </div>
                 <div class="item">
-                    <img class="box-filme" src="img/mini8.jpg" alt="" srcset="">
+                    <img onclick="myFunction(this.id)" id="i" class="box-filme" src="img/mini9.jpg" alt="" srcset="">
                 </div>
-                <div class="item">
-                    <img class="box-filme" src="img/mini9.jpg" alt="" srcset="">
-                </div>
-                <div class="item">
-                    <img class="box-filme" src="img/mini10.jpg" alt="" srcset="">
-                </div>
-        </div>
+            </div>
     </div>
-
-
 
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
     <script src="JS/owl/jquery.min.js"></script>
     <script src="JS/owl/owl.carousel.min.js"></script>
     <script src="JS/owl/main.js"></script>
 
+   
+    <script> 
+        var paragraph = document.getElementById("descricao");         
+        var titulo = document.getElementById("tituloDaPagina");
+        var changeHref = document.getElementById("play");
+    </script>
+        
 
 </body>
 </html>
